--- a/index.html
+++ b/index.html
@@ -621,9 +621,9 @@
 
              <!---------boton reserva---------------------->
 
-             <button class="btn btn-light mb-4 fixed-bottom btn-reserva" data-bs-toggle="modal" data-bs-target="#reservaModal">
+            <button class="btn btn-light mb-4 fixed-bottom btn-reserva" onClick="openModal()">
                 Reserva en linea
-                  </button>
+            </button>
 
 
             <!-- Modal -->
@@ -632,8 +632,7 @@
                     <div class="modal-content">
 
                         <div class="modal-body">
-                            <form >
-                                
+                            <form id="reservaForm">
                                 <h2 class="title">Formulario de Registro</h2>
                                 <br>
 
@@ -651,14 +650,14 @@
                                     </div>
 
                                     <div class="mb-3">
-                                        <label for="inputEmail4" class="form-label">Correo Electrónico</label>
-                                        <input type="email" name="email" class="form-control" id="inputEmail4" placeholder="nombre@ejemplo.com" required/>
+                                        <label for="inputEmail" class="form-label">Correo Electrónico</label>
+                                        <input type="email" name="email" class="form-control" id="inputEmail" placeholder="nombre@ejemplo.com" required/>
                                         <div class="invalid-feedback">Completa el campo</div>
                                     </div>
 
                                     <div class="mb-3">
                                         <label for="inputTelefono" class="form-label">Número de Celular (10 digitos)</label>
-                                        <input type="tel" name="telefono" class="form-control" placeholder="Número de Celular"   pattern="[0-9]{10}"  required/>
+                                        <input type="tel" name="telefono" class="form-control" placeholder="Número de Celular" id="inputTelefono"  pattern="[0-9]{10}"  required/>
                                         <div class="invalid-feedback">Completa el campo</div>
                                     </div>
 
@@ -670,7 +669,7 @@
                                     <!------Seleccionar el servicio----->
                                     <div class="mb-3">
                                         <label for="inputState" class="form-label">Servicios</label>
-                                        <select id="inputState" class="form-select" required>
+                                        <select id="inputServicio" class="form-select" required>
                                             <option selected>Seleccione el servicio</option>
                                             <option>Cumpleaños</option>
                                             <option>Fiestas infantiles</option>
@@ -685,11 +684,11 @@
                                     <div class="row mb-3">
                                         <div class="col-6">
                                             <label for="inputFechaReservacion" class="form-label">Fecha</label>
-                                            <input id="inputFechaReservacion" name="fecha" class="form-control" type="date" min="2021-11-01" max="2023-12-31" required/>
+                                            <input id="inputFecha" name="fecha" class="form-control" type="date" min="2021-11-01" max="2023-12-31" required/>
                                         </div>
                                         <div class="col-6">
                                             <label for="inputHoraReservacion" class="form-label">Hora</label>
-                                            <input id="inputHoraReservacion" name="hora" class="form-control" type="time" required/>
+                                            <input id="inputHora" name="hora" class="form-control" type="time" required/>
                                         </div>
                                     </div>
 
@@ -704,13 +703,13 @@
 
                                     <!------indicaciones especiales-------->
                                     <div class="mb-3">
-                                        <label for="exampleFormControlTextarea1" class="form-label"></label>
-                                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Indicaciones especiales" rows="3"></textarea>
+                                        <label for="inputIndicaciones" class="form-label"></label>
+                                        <textarea class="form-control" id="inputIndicaciones" placeholder="Indicaciones especiales" rows="3"></textarea>
                                     </div>
 
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cerrar</button>
-                                        <button type="submit"  class="btn btn-warning" onclick="enviarCorreo()">Registrar</button>
+                                        <button type="button" class="btn btn-dark" onClick="closeModal()">Cerrar</button>
+                                        <button type="button"  class="btn btn-warning" onclick="getData()">Registrar</button>
                                     </div>
 
                                 </div>
@@ -726,7 +725,7 @@
         <!-- BOOTSTRAP CDNJS -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <script src="sans.js"></script>
